[project]
name = "MyDocs"
version = "0.1.0"
description = "Getting Started with gRPC on Windows"
authors = ["Thomas Hochstrasser <thommyho1988@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-include>=0.8.1",
    "mike>=2.1.3",
    "mkdocs-material>=9.6.22",
    "mkdocs-material-extensions>=1.3.1",
]
